--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,40 +23,36 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.android.support:cardview-v7:25.3.1'
-
-
     // multi dex error resolve
     compile 'com.android.support:multidex:1.0.0'
-
     // Retrofit XML converter (Simple)
-    compile ('com.squareup.retrofit2:converter-simplexml:2.3.0'){
+    compile('com.squareup.retrofit2:converter-simplexml:2.3.0') {
         exclude group: 'xpp3', module: 'xpp3'
-       // exclude group: 'stax', module: 'stax-api'
+        // exclude group: 'stax', module: 'stax-api'
         //exclude group: 'stax', module: 'stax'
     }
-
     //Json
     // Retrofit & OkHttp
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
-
     //for the animated splash screen
     compile 'com.flaviofaria:kenburnsview:1.0.6'
     // MaterialRefreshLayout v1.3.0
     compile 'com.cjj.materialrefeshlayout:library:1.3.0'
-
     //for the image loading
     compile 'com.facebook.fresco:fresco:1.5.0'
-
+    //for the pdf views
+    //compile 'org.apache.pdfbox:pdfbox:2.0.2'
     testCompile 'junit:junit:4.12'
+    //compile files('src/main/libs/pdfbox-2.0.2.jar')
+    compile files('src/main/libs/pdfbox-2.0.7.jar')
 }
